labs-9/ec2.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region     = "us-east-1"
#   access_key = "PUT YOUR OWN"
#   secret_key = "PUT YOUR OWN"
}

terraform {
  backend "s3" {
    region     = "us-east-1"
    # access_key = "YOUR-ACCESS-KEY"
    # secret_key = "YOUR-SECRET-KEY"
    bucket = "terraform-backend-franklin"
    key = "terraformcloud.fstate"
  }
}

resource "aws_eip" "lb" {
  instance = aws_instance.myec2.id
  domain   = "vpc"
}

output "myeip" {
  value = aws_eip.lb.public_ip
}

resource "aws_instance" "myec2" {
  ami           = "ami-0c7217cdde317cfec"
  instance_type = "t3.micro"
  key_name      = "terraformcloud"
  security_groups = [aws_security_group.my_security_group.name]
  tags = {
    Name = "ec2-franklin"
  }
}

resource "aws_security_group" "my_security_group" {
  name        = "my-security-group"
  description = "Security group allowing access to ports 22, 80, and 443"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
